<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#F44336"
    android:orientation="vertical"
    android:padding="25sp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:padding="45sp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/txt_berat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/beratBadan"
        android:textAlignment="viewStart"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/txt_beratBadan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:background="@drawable/border_outline"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/masukan_berat_badan"
        android:textSize="12sp"
        android:autofillHints="Berat Badan" />

    <TextView
        android:id="@+id/txt_tinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/tinggiBadan"
        android:textAlignment="viewStart"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/txt_tinggiBadan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:background="@drawable/border_outline"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/masukan_tinggi_badan"
        android:textSize="12sp"
        android:autofillHints="Tinggi Badan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/inter_medium"
            android:text="@string/toast"
            android:textSize="14sp"
            app:cornerRadius="8sp" />

        <Space
            android:layout_width="14dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_hitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/inter_medium"
            android:text="@string/hitung"
            android:textSize="14sp"
            app:cornerRadius="8sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/_0"
        android:textAlignment="center"
        android:layout_marginTop="25sp"
        android:textColor="@color/black"
        android:textSize="150sp" />

</LinearLayout>